FIX: ChatList에 users 추가
