# docs/swagger.yaml
@@ -16,11 +16,27 @@ definitions:
       id:
         example: 1
         type: integer
+      name:
+        example: 개발팀 채팅방
+        type: string
+    type: object
+  common.ChatListData:
+    properties:
+      createdAt:
+        example: "2024-03-23T12:00:00Z"
+        type: string
+      id:
+        example: 1
+        type: integer
       lastMessage:
         $ref: '#/definitions/common.LastMessage'
       name:
         example: 개발팀 채팅방
         type: string
+      users:
+        items:
+          $ref: '#/definitions/common.UserInfo'
+        type: array
     type: object
   common.ChatListResponse:
     properties:
@@ -29,7 +45,7 @@ definitions:
         type: integer
       data:
         items:
-          $ref: '#/definitions/common.ChatData'
+          $ref: '#/definitions/common.ChatListData'
         type: array
       success:
         example: true
@@ -259,6 +275,15 @@ definitions:
         example: 홍길동
         type: string
     type: object
+  common.UserInfo:
+    properties:
+      id:
+        example: 1
+        type: integer
+      nickname:
+        example: 홍길동
+        type: string
+    type: object
   controllers.CreateGroupChatRequest:
     type: object
   controllers.CreatePrivateChatRequest:
@@ -404,7 +429,8 @@ paths:
     get:
       consumes:
       - application/json
-      description: 현재 로그인한 사용자가 참여중인 모든 채팅방 목록을 조회합니다. 각 채팅방의 마지막 메시지 정보도 함께 제공됩니다.
+      description: 현재 로그인한 사용자가 참여중인 모든 채팅방 목록을 조회합니다. 각 채팅방의 마지막 메시지 정보와 참여자 정보도
+        함께 제공됩니다.
       produces:
       - application/json
       responses:
